--- a/style.css
+++ b/style.css
@@ -142,6 +142,9 @@ hr.rounded{
     margin-top: -10px;
     padding: 8px;
   }
+  .trending {
+    display: none;
+  }
 }
 /* Pour les écrans de taille moyenne comme les tablettes */
 @media (min-width: 768px) and (max-width: 991px) {
@@ -150,5 +153,8 @@ hr.rounded{
     font-size: 16px;
     margin-top: -18px;
     padding: 12px;
+  }
+   .trending {
+    display: none;
   }
 }
