--- a/style.css
+++ b/style.css
@@ -142,6 +142,11 @@ hr.rounded{
     margin-top: -10px;
     padding: 8px;
   }
+    .trending{
+     color: #111;
+     font-family: 'Rubik', sans-serif;
+
+}
 }
 /* Pour les écrans de taille moyenne comme les tablettes */
 @media (min-width: 768px) and (max-width: 991px) {
@@ -151,16 +156,9 @@ hr.rounded{
     margin-top: -18px;
     padding: 12px;
 }
-
-/* Pour les écrans de petite taille comme les smartphones */
-@media (max-width: 480px) {
-  .trending {
-    display: none;
-  }
+  .trending{
+    color: #111;
+    font-family: 'Rubik', sans-serif;
+          
 }
-/* Pour les écrans de taille moyenne comme les tablettes */
-@media (min-width: 768px) and (max-width: 991px) {
-  .trending {
-    display: none;
-  }
 }
